--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,6 +12,7 @@
     --gray-900: #121214;
     --gray-800: #29292e;
     --gray-850: #1f2729;
+    --gray-700: #323238;
 
     --cyan-500: #61dafb;
     --yellow-500: #eba417;
